--- a/index.html
+++ b/index.html
@@ -4,11 +4,73 @@
 <title>ATK-Admin</title>
 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="#" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link href="#" rel="stylesheet">
 <link rel="stylesheet" type="text/css"href="css/home.css">
 </head>
 <body> 
+
+ <div class="sidebar">
+    <div class="sidebar-brand">
+      <h1><span class="lab la-accusoft"></span> Accusoft</h1>
+    </div>
+
+    <div class="sidebar-menu">
+        <ul>
+          <li>
+            <a href="">
+            <span class="las la-igloo"></span>
+            <span>Dashboard</span>
+          </a>
+          </li>
+
+          <li>
+            <a href="">
+            <span class="las la-users"></span>
+            <span>Customers</span>
+          </a>
+          </li>
+
+          <li>
+            <a href="">
+            <span class="las la-clipboard-list"></span>
+            <span>Projects</span>
+          </a>
+          </li>
+
+          <li>
+            <a href="">
+            <span class="las la-shipping-bag"></span>
+            <span>Orders</span>
+          </a>
+          </li>
+
+          <li>
+            <a href="">
+            <span class="las la-receipt"></span>
+            <span>Inventory</span>
+          </a>
+          </li>
+
+          
+          <li>
+            <a href="">
+            <span class="las la-user-circle"></span>
+            <span>Accounts</span>
+          </a>
+          </li>
+
+          <li>
+            <a href="">
+            <span class="las la-clipboard-list"></span>
+            <span>Tasks</span>
+          </a>
+          </li>
+
+        </ul>
+    </div>
+
+ </div>
 
 </body>
 </html>
