added main content html closes #3

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <li>
             <a href="">
-            <span class="las la-shipping-bag"></span>
+            <span class="las la-shopping-bag"></span>
             <span>Orders</span>
           </a>
           </li>
@@ -69,6 +69,72 @@
 
         </ul>
     </div>
+
+ </div>
+
+ <div class="main-content">
+   <header>
+     <div class="header-title">
+       <h1>
+        <label for="">
+          <span class="las la-bars"></span>
+        </label>
+        Dashboard
+       </h1>
+
+       <div class="search-wrapper">
+          <span class="las la-search"></span>
+          <input type="search" placeholder="Search here"/>
+       </div>
+
+       <div class="user-wrapper">
+         <img src="images/profile.png" alt="" width="40px" height="40px">
+         <div>
+           <h4>Jireh Kapanga</h4>
+           <small>Super admin</small>
+         </div>
+       </div>
+
+     </div>
+   </header>
+
+   <main>
+      <div class="cards">
+
+          <div class="card-single">
+            <div>
+              <h1>200</h1>
+              <span>Customers</span>
+            </div>
+              <span class="las la-users"></span>
+          </div>
+
+          <div class="card-single">
+            <div>
+              <h1>70</h1>
+              <span>Projects</span>
+            </div>
+              <span class="las la-clipboard-list"></span>
+          </div>
+
+          <div class="card-single">
+            <div>
+              <h1>54</h1>
+              <span>Orders</span>
+            </div>
+              <span class="las la-shopping-bag"></span>
+          </div>
+
+          <div class="card-single">
+            <div>
+              <h1>10500$</h1>
+              <span>Income</span>
+            </div>
+              <span class="las la-google-wallet"></span>
+          </div>
+
+      </div>
+   </main>
 
  </div>
 
